src/App.css
/* OXANIUM WEBFONT */

/* latin-ext */
@font-face {
  font-family: 'Oxanium';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Oxanium Regular'), local('Oxanium-Regular'), url(./fonts/Oxanium-Regular.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Oxanium';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Oxanium Regular'), local('Oxanium-Regular'), url(./fonts/Oxanium-Regular.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'Oxanium';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: local('Oxanium Medium'), local('Oxanium-Medium'), url(./fonts/Oxanium-Medium.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Oxanium';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: local('Oxanium Medium'), local('Oxanium-Medium'), url(./fonts/Oxanium-Medium.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'Oxanium';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local('Oxanium Bold'), local('Oxanium-Bold'), url(./fonts/Oxanium-Bold.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Oxanium';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: local('Oxanium Bold'), local('Oxanium-Bold'), url(./fonts/Oxanium-Bold.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* FLEXBOX */

.d-flex {
  display: flex;
}

/* TEXT */

.ion-text-center {
  text-align: center !important;
}

.ion-text-uppercase {
  text-transform: uppercase !important;
}

.text-primary {
  color: var(--ion-color-primary) !important;
}

.font-weight-bold {
  font-weight: 700 !important;
}

/* Standings */
.constructor-logo {
  --ion-margin: 1.5rem;

  width: 1.5rem;
  height: 1.5rem;
}

.country-thumbnail {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  width: 1.5rem;
  height: 1rem;
}

.country-thumbnail ion-img {
  border-radius: 0.25rem;
}

.standings-points {
  min-width: 2.625rem;
}

/* QUALI */
.quali-title {
  min-width: 3.75rem;
}

.quali-results {
  min-width: 13.25rem;
}

